--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 .title{
     text-align: center; 
-    color:blue;
+    color:rgb(0, 0, 0);
     text-transform: uppercase;
 font-size: 32px;
 font-family: 'Times New Roman', Times, serif
@@ -16,7 +16,7 @@ body{
 ul{
     list-style-type: none;
     border: 1px solid #a200ff; 
-    background-color: #928b8b;
+    background-color: #ff6262;
     overflow: hidden;
     padding: 0px;
     margin: 0px;
@@ -28,7 +28,7 @@ li{
 
 a{
     text-decoration: none;
-    color: #0004ff;
+    color: #006eff;
 }
 
 li a{
@@ -41,7 +41,7 @@ li a{
 }
 
 li a:hover{
-    background-color: #2600ff;
+    background-color: #15ff00;
 }
 
 .nav-log{
@@ -59,7 +59,7 @@ thead tr{
 }
 
 thead{
-    background-color:#928b8b;
+    background-color:#00ff4c;
     color:rgb(0, 0, 0);    
 }
 
@@ -93,4 +93,8 @@ p{
 form{
     width: 100%;
     
+}
+
+tbody tr:nth-child(even){
+    background-color: lightgray;
 }
